<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Concert_Calendar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_search">Search</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_display_message">My message</string>
    <string name="download_text">Click Download to Retrieve Concert Information</string>
    <string name="button_saved_searches">Saved Searches</string>
    <string name="title_activity_downloading_content">DownloadingContent</string>
    <string name="title_activity_display_artist">DisplayArtistActivity</string>
    <string name="display_artist_title">Artist 1</string>
    <string name="button_advance">Continue</string>
    <string name="downloading_content">Downloading Concerts</string>
    <string name="apptitle_activity_main">Concert Calendar</string>
    <string name="title_description_main">View up to date concert information on all of your favorite artists, localized to the philadelphia area courtesy of XPN.org</string>
    <string name="title_activity_search">Search Activity</string>
    <string name="title_activity_saved_searches">SavedSearchesActivity</string>
    <string name="title_activity_concert_calendar">ConcertCalendarActivity</string>
    <string name="button_concert_calendar">Concert Calendar</string>
    <string name="header_activity_search">Search</string>
    <string name="header_description_activity_search">Enter the artist you would like to search for, then click the search button</string>
    <string name="button_search_activity_search">Search</string>
    <string name="edit_text_activity_search">Enter Artist Name</string>
    <string name="title_activity_search_artist">SearchArtistActivity</string>
    <string name="header_activity_search_artist">Results:</string>
    <string name="button_add_activity_search">Add</string>
    <string name="button_save_search_activity">Save</string>
    <string name="header_saved_searches_activity">Saved Searches:</string>

</resources>
