<LinearLayout 
    android:id="@+id/layout_activity_search"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.concert_calendar.SearchActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_activity_search"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_description_activity_search" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="200dp"/>

    <EditText
        android:id="@+id/artist_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_activity_search" />
	<LinearLayout
	    android:id="@+id/button_layout_activity_search"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
   	 	<Button 
        	android:id="@+id/button_add_search_activity"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:onClick="addArtist"
        	android:text="@string/button_add_activity_search" />
    	<Button
       	 	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:onClick="searchArtist"
        	android:text="@string/button_search_activity_search" />
    	<Button
       	 	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:onClick="saveSearch"
        	android:text="@string/button_save_search_activity" />
		</LinearLayout>
		<LinearLayout
		    android:id="@+id/layout_artists_activity_search"
		    android:orientation="vertical"
		    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"></LinearLayout>
</LinearLayout>